syntax = "proto3";

package strobesbufs.analyzers.analyzer;

import "google/protobuf/struct.proto";

message ScanMeta {
  int32 critical = 1;
  int32 high = 2;
  int32 medium = 3;
  int32 low = 4;
  int32 info = 5;
  int32 total_bugs = 6;
}

message SAST {
  string file_name = 1;
  string vulnerable_code = 2;
  string start_line_no = 3;
  string end_line_no = 4;
  string commit = 5;
}

message DAST {
  repeated string uri = 1;
  Port port = 2;
  string method = 3;
  string param = 4;
  string evidence = 5;
  string request_headers = 6;
  string response_headers = 7;
}


message Network {
  string ipaddress = 1;
  Port port = 2;
  string hostname = 3;
  string macaddress = 4;
  string cpe = 5;
}

message Package {
  string name = 1;
  string installed_version = 2;
  string affected_versions = 3;
  string commit =4;
}

message Container {
  string package_name = 1;
  string fixed_version = 2;
  string installed_version = 3;
  repeated string cpe = 4;
  string digest = 5;
}

message AWS {
  enum Type {
    ACCOUNT = 0;
    API_GATEWAY = 1;
    CERTIFICATE_MANAGER = 2;
    CLOUDFORMATION = 3;
    CLOUDFRONT = 4;
    CLOUDTRAIL = 5;
    EC2 = 6;
    SECURITYGROUP = 7;
    VPC = 8;
    ECS = 9;
    EKS = 10;
    ELASTICSEARCH = 11;
    ELB = 12;
    IAM = 13;
    KMS = 14;
    LAMBDA = 15;
    RDS = 16;
    REDSHIFT = 17;
    S3 = 18;
    SNS = 19;
    SQS = 20;
    GUARDDUTY = 21;
    ROUTE53 = 22;
    ECR = 23;
    GLACIER = 24;
    ACCESS_ANALYZER = 25;
    OTHERS = 26;
  }

  string resource_id = 1;
  Type type = 2;
  string category = 3;
}

message Cloud {
  string region = 1;
  AWS aws = 2;
}

message Port {
    string protocol = 1;
    string port_id = 2;
    string service =3;
    string product = 4;
    enum State {
        NOTDEFINED = 0;
        OPEN = 1;
        CLOSED =2;
        FILTERED =3;
        UNFILTERED =4;
        OPEN_OR_FILTERED =5;
        CLOSED_OR_FILTERED = 6;
    }
    State state = 5;
}

message Asset {
    string name = 1;
    string ipaddress = 2;
    repeated string os = 3;
    string mac_address = 4;
    string hostname = 5;
    string netbios = 6;
    repeated string cpe = 7;
    repeated string tags = 8;
    string risk_score = 9;
    repeated Port ports = 10;
    enum State{
        DOWN = 0;
        UP = 1;
    }
    State state = 11;

  }

message Bug {
  string title = 1;
  string description = 2;
  int32 severity = 3;
  float CVSS = 4;
  string step_to_reproduce = 5;
  string mitigation = 6;
  repeated string CVE = 7;
  repeated string CWE = 8;
  repeated string references = 9;
  SAST sast = 10;
  DAST dast = 11;
  Network network = 12;
  Cloud cloud = 13;
  Package package = 14;
  Container container = 15;
  map<string, string> scan_details = 16;
  repeated string tags = 17;
  google.protobuf.Struct extra_info = 18;
  string vulnerable_since = 19;
  Asset asset = 20;
}


message Result {
    ScanMeta scan_meta = 1;
    repeated Bug bugs_list = 2;
    repeated Asset assets_list = 3;
    enum Analyzer {
      NOANALYZER = 0;
      SPOTBUGS = 1;
      PROWLER = 2;
      ZAP = 3;
      TRIVY = 4;
      ANCHORE = 5;
      BANDIT = 6;
      BRAKEMAN = 7;
      NODEJSCAN = 8;
      PHPCS = 9;
      ESLINT = 10;
      SCODESCAN = 11;
      GITLEAKS = 12;
      CLOUDMAPPER = 13;
      GOSEC = 14;
      FLAWFINDER = 15;
      DEPENDENCY = 16;
      NMAP = 17;
      SONARQUBE = 18;
      BURPSUITE = 19;
      NESSUS = 20;
      NEXPOSE = 21;
      SUBFINDER =22;
      TERRAFORM - 23;
    }
    Analyzer analyzer = 4;
    enum Parser {
      NOPARSER = 0;
      BURP_XML_PARSER = 1;
      QUALYS_XML_PARSER = 2;
      NESSUS_XML_PARSER = 3;
      NEXPOSE_XML_PARSER = 4;
      POSTMAN_CONVERTER = 5;
      NMAP_XML_PARSER =6;
    }
    Parser parser = 5;
    bool success = 6;
}
